--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,4 +2,7 @@
 members = ["frontend", "aliusnes"]
 resolver = "2"
 
+[profile.release]
+debug = true
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
