--- a/aliusnes/Cargo.toml
+++ b/aliusnes/Cargo.toml
@@ -10,3 +10,5 @@ lazy_static = "1.4.0"
 log = "0.4.21"
 simplelog = "0.12.2"
 proc-bitfield = "0.3.0"
+serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
