--- a/aliusnes/Cargo.toml
+++ b/aliusnes/Cargo.toml
@@ -9,5 +9,8 @@ edition = "2021"
 log = "0.4.21"
 simplelog = "0.12.2"
 proc-bitfield = "0.3.0"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
