--- a/.github/main.yml
+++ b/.github/main.yml
@@ -1,25 +1,41 @@
 name: main
 
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches:
+      - master
 
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: "-Dwarnings"
+  RUSTFLAGS: "-D warnings"
 
 jobs:
   check:
     runs_on: ubuntu-latest
     steps:
-      - name: Setup env
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@nightly
-      - run: cargo check
 
-      - name: Clippy check
-      - run: cargo clippy --all-targets --all-features
+      - name: Setup Rust toolchain and cache
+        uses: actions-rust-lang/setup-rust-toolchain@v1.9.0
+        with:
+          toolchain: nightly
 
       - name: Format check
       - run: cargo fmt --all -- --check
 
+      - name: Clippy check
+      - run: cargo clippy --all-targets --all-features
+  
+  tests:
+    runs_on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Rust toolchain and cache
+        uses: actions-rust-lang/setup-rust-toolchain@v1.9.0
+        with:
+          toolchain: nightly
+
       - name: Run tests
-      - run: cargo test --package aliusnes
+        run: cargo test --package aliusnes
