--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
           toolchain: nightly
 
       - name: Format check
-      - run: cargo fmt --all -- --check
+        run: cargo fmt --all -- --check
 
       - name: Clippy check
-      - run: cargo clippy --all-targets --all-features
+        run: cargo clippy --all-targets --all-features
   
   tests:
     runs-on: ubuntu-latest
