--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  RUSTFLAGS: "-D warnings"
+  #  RUSTFLAGS: "-D warnings"
 
 jobs:
   check:
@@ -20,6 +20,7 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1.9.0
         with:
           toolchain: nightly
+          components: rustfmt
 
       - name: Format check
         run: cargo fmt --all -- --check
