--- a/aliusnes/Cargo.toml
+++ b/aliusnes/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+log = ["simplelog"]
 
 [dependencies]
 log = "0.4.21"
-simplelog = "0.12.2"
+simplelog = { version = "0.12.2", optional = true}
 proc-bitfield = "0.3.0"
 
 [dev-dependencies]
