--- a/aliusnes/Cargo.toml
+++ b/aliusnes/Cargo.toml
@@ -17,3 +17,6 @@ pretty_assertions = "1.4.0"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = "1.0.117"
 xz2 = "0.1.7"
+
+[build-dependencies]
+heck = "0.5.0"
