--- a/aliusnes/Cargo.toml
+++ b/aliusnes/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
 log = ["simplelog"]
+trace = ["log"]
 
 [dependencies]
 log = "0.4.21"
